<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_baseline_reorder_24"
        android:title="@string/menu_list" />

    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/ic_baseline_import_contacts_24"
        android:title="@string/menu_learn" />
    <item
        android:id="@+id/navigation_test"
        android:icon="@drawable/ic_baseline_spellcheck_24"
        android:title="@string/menu_test" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_setting" />

</menu>
